--- a/MVC.WebUI/Content/website/css/scss/_core/breadcrumbs.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/breadcrumbs.scss
@@ -3,31 +3,5 @@
 /*******************************************************************************************************************************/
 
 /************************************************************************************************************************************************************************************/
-/* Standard Breadcrumb */
+/* Breadcrumb */
 
-ol.breadcrumb {
-    font-size: 1rem;
-    margin: 0;
-    padding: 0.5em 0;
-    text-transform: capitalize;
-
-    li {
-        position: relative;
-        display: inline-block;
-        margin: 0;
-        padding: 0;
-    }
-
-    li::before {
-        display: inline-block;
-        margin: 0 0.5em;
-        content: "";
-        border: 0.3125em solid transparent;
-        border-right: none;
-        border-left-color: black;
-    }
-
-    li:first-child::before {
-        content: none;
-    }
-}
