--- a/MVC.WebUI/Content/website/css/scss/reset.scss
+++ b/MVC.WebUI/Content/website/css/scss/reset.scss
@@ -102,7 +102,7 @@
 
 /* Full Screen API *****************************************************************************************************************************/
 
-/* Blink - emulate Gecko behaviour to make content stretch to fill the screen */
+/* Blink/WebKit - emulate Gecko behaviour to make content stretch to fill the screen */
 :-webkit-full-screen {
     width: 100%;
     height: 100%;
