--- a/MVC.WebUI/Content/website/css/scss/reset.scss
+++ b/MVC.WebUI/Content/website/css/scss/reset.scss
@@ -113,6 +113,7 @@
 /***********************************************************************************************************************************************/
 /* GLOBAL ATTRIBUTES */
 
+[readonly],
 [disabled] {
     opacity: 0.5;
     cursor: not-allowed;
