Repository and UnitOfWork rewritten
Now split into ReadOnlyRepository and Repository. Also takes in changes
suggested by: http://cpratt.co/truly-generic-repository/.

--- a/MVC.WebUI/Content/website/css/scss/reset.scss
+++ b/MVC.WebUI/Content/website/css/scss/reset.scss
@@ -530,3 +530,13 @@ img {
 svg {
     fill: currentColor;
 }
+
+
+
+/***********************************************************************************************************************************************/
+/* ANGULARJS */
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
+.ng-cloak, .x-ng-cloak {
+    display: none !important;
+}
